(Try to) fix scrolling on iPhone

--- a/src/Feederate/FeederateBundle/Resources/public/css/_layout.less
+++ b/src/Feederate/FeederateBundle/Resources/public/css/_layout.less
@@ -1,4 +1,6 @@
 html {
+    height: 100%;
+
     body {
         background-color: @lightBackground;
         color: @normalFontColor;
